# dasom-qt

./: .gitignore  .travis.yml  Makefile.am  NEWS  README  configure.ac
debian/: changelog  control  copyright
qt4/: Makefile.am  im-dasom-qt4.cpp
qt5/: Makefile.am  im-dasom-qt5.cpp
